#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1243] Added http-sap-netweaver-leak to detect SAP Netweaver Portal 
  with the Knowledge Management Unit enabled with anonymous access. [ArphanetX]

o [NSE] Collected utility functions for string processing into a new library,
  stringaux.lua. [Daniel Miller]

o [NSE][GH#1359] Fix a false-positive in http-phpmyadmin-dir-traversal when the
  server responds with 200 status to a POST request to any URI. [Francesco Soncina]

o [NSE] New vulnerability state in vulns.lua, UNKNOWN, is used to indicate that
  testing could not rule out vulnerability. [Daniel Miller]

o [NSE] New rand.lua library uses the best sources of random available on the
  system to generate random strings. [Daniel Miller]

o [NSE] Collected utility functions for manipulating and searching tables into
  a new library, tableaux.lua. [Daniel Miller]

o [GH#1355] When searching for Lua header files, actually use them where they
  are found instead of forcing /usr/include. [Fabrice Fontaine, Daniel Miller]

o [NSE][GH#1331] Script traceroute-geolocation no longer crashes when
  www.GeoPlugin.net returns null coordinates [Michal Kubenka, nnposter]

o Limit verbose -v and debugging -d levels to a maximum of 10. Nmap does not
  use higher levels internally. [Daniel Miller]

o [NSE] bin.lua is officially deprecated. Lua 5.3, added 2 years ago in Nmap
  7.25BETA2, has native support for binary data packing via string.pack and
  string.unpack. All existing scripts and libraries have been updated.
  [Daniel Miller]

o [NSE] tls.lua when creating a client_hello message will now only use a SSLv3
  record layer if the protocol version is SSLv3. Some TLS implementations will
  not handshake with a client offering less than TLSv1.0. Scripts will have to
  manually fall back to SSLv3 to talk to SSLv3-only servers. [Daniel Miller]

o [NSE][GH#1322] Fix a few false-positive conditions in ssl-ccs-injection. TLS