@@ -1,5 +1,9 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#1361] Deprecate and disable the -PR (ARP ping) host discovery option. ARP
+  ping is already used whenever possible, and the -PR option would not force it
+  to be used in any other case. [Daniel Miller]
+
 o [NSE][GH#1243] Added http-sap-netweaver-leak to detect SAP Netweaver Portal 
   with the Knowledge Management Unit enabled with anonymous access. [ArphanetX]
 
